--- a/_config.yml
+++ b/_config.yml
@@ -104,15 +104,15 @@ share-links-active:
 google_analytics: "G-W4GZWJTY3W"
 
 # Google Tag Manager ID
-# gtm: "<!-- Google tag (gtag.js) -->
-# <script async src="https://www.googletagmanager.com/gtag/js?id=G-W4GZWJTY3W"></script>
-# <script>
-#   window.dataLayer = window.dataLayer || [];
-#   function gtag(){dataLayer.push(arguments);}
-#   gtag('js', new Date());
+gtm: <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-W4GZWJTY3W"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-#   gtag('config', 'G-W4GZWJTY3W');
-# </script>"
+  gtag('config', 'G-W4GZWJTY3W');
+</script>
 
 # Matomo (aka Piwik) Web statistics
 # Uncomment the following section to enable Matomo. The opt-out parameter controls
